plugins {
    id 'java'
}

group = 'cz.kominekjan'
version = "5.3.2"

repositories {
//    mavenLocal()
    mavenCentral()
    maven {
        name = "papermc-repo"
        url = "https://repo.papermc.io/repository/maven-public/"
    }
    maven {
        name = "sonatype"
        url = "https://oss.sonatype.org/content/groups/public/"
    }
    maven {
        name = "auxilor-repo"
        url = "https://repo.auxilor.io/repository/maven-public/"
    }
}

dependencies {
    compileOnly "io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT"

    compileOnly "com.mojang:authlib:3.11.50"


    // Custom Enchants
    compileOnly "com.willfp:EcoEnchants:12.16.0"
    compileOnly "com.willfp:eco:6.73.0"
    implementation files('libs/ExcellentEnchants-4.1.0.jar')
    implementation files('libs/AdvancedEnchantments-8.7.4.jar')
    implementation files('libs/UberEnchant-8.11.5.jar')
    implementation files('libs/EnchantsSquared-2.5.12.jar')
}

def targetJavaVersion = 21
java {
    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
    sourceCompatibility = 1.17
    targetCompatibility = 1.17
    if (JavaVersion.current() < javaVersion) {
        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
    }
}

tasks.withType(JavaCompile).configureEach {
    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
        options.release = targetJavaVersion
    }
}

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}
